Início da migração

--- a/customer-service-api/.vscode/settings.json
+++ b/customer-service-api/.vscode/settings.json
@@ -3,5 +3,30 @@
     "tests"
   ],
   "python.testing.unittestEnabled": false,
-  "python.testing.pytestEnabled": true
+  "python.testing.pytestEnabled": true,
+  "sqltools.connections": [
+    {
+      "mysqlOptions": {
+        "authProtocol": "default"
+      },
+      "previewLimit": 50,
+      "server": "localhost",
+      "port": 3306,
+      "driver": "MySQL",
+      "name": "MySQL Local",
+      "username": "admin",
+      "password": "admin",
+      "database": "admin"
+    },
+    {
+      "previewLimit": 50,
+      "server": "localhost",
+      "port": 5432,
+      "driver": "PostgreSQL",
+      "name": "Postgres Local",
+      "database": "postgres",
+      "username": "admin",
+      "password": "admin"
+    }
+  ]
 }
