--- a/customer-service-api/pyproject.toml
+++ b/customer-service-api/pyproject.toml
@@ -1,25 +1,25 @@
 [tool.poetry]
-name = "thisevent-fiap-auth-service"
+name = "customer-service-api"
 version = "0.1.0"
 description = ""
 authors = ["OscarSilvaOfficial <oscarkaka222@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-Flask = "^2.0.2"
-Flask-SQLAlchemy = "^2.5.1"
-Flask-RESTful = "^0.3.9"
-PyMySQL = "^1.0.2"
-SQLAlchemy-serializer = "^1.4.1"
-PyJWT = "^2.3.0"
-SQLAlchemy-Utils = "^0.37.9"
-requests = "^2.26.0"
-psycopg2-binary = "^2.9.2"
-pytest = "^6.2.5"
-mysql-connector-python = "^8.0.27"
+phonenumbers = "^8.12.44"
+fast-sql-manager = "^1.3.6"
 
 [tool.poetry.dev-dependencies]
+pytest = "^7.0.1"
+pytest-instafail = "^0.4.2"
+pytest-sugar = "^0.9.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+log_cli = true
+log_cli_level = "INFO"
+log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
+log_cli_date_format = "%Y-%m-%d %H:%M:%S"
