--- a/customer-service-api/pyproject.toml
+++ b/customer-service-api/pyproject.toml
@@ -13,6 +13,7 @@ fast-sql-manager = "^1.3.6"
 pytest = "^7.0.1"
 pytest-instafail = "^0.4.2"
 pytest-sugar = "^0.9.4"
+autopep8 = "^1.6.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
